<resources>
    <string name="app_name">FinanceLearn</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="staff_number">Staff Number</string>

    <string name="title_activity_pre_test">PreTest</string>
    <string name="employee">STAFF</string>
    <string name="manager">MANAGER</string>
    <string name="hr">HR</string>
    <string name="select_your_category">Select Your Category</string>
    <string name="employee_login">Employee Login</string>
    <string name="your_employee_id">Your employee Id</string>
    <string name="manager_login">Manager Login</string>
    <string name="you_id">Your Id</string>
    <string name="hr_id">Hr Id</string>
    <string name="hr_login">Hr Login</string>
    <string name="your_password">Your password</string>
    <string name="continue_">CONTINUE</string>
    <string name="your_id">Your Id</string>
    <string name="welcome_lets_get_you_started">Let\'s get you started</string>
    <string name="welcome_ugo">Welcome, Ugo</string>
    <string name="my_courses">My Courses</string>
    <string name="demo">DEMO VIDEOS</string>
    <string name="send_notification">SEND NOTIFICATION</string>
    <string name="action_next">NEXT</string>
    <string name="new_password">New Password</string>
    <string name="current_password">Current password</string>
    <string name="update_my_password">Update My Password</string>
    <string name="sign_out">Sign Out</string>
    <string name="staff_to_assign_courses">Staff to assign courses</string>
    <string name="assign_2_courses">Assign 2 Courses</string>
    <string name="assign_selected"><![CDATA[ASSIGN SELECTED >]]></string>
    <string name="finish_up">FINISH UP!</string>
    <string name="let_s_test_your_knowlegdge">Let\'s test your knowlegdge</string>
    <string name="text_previous">PREVIOUS</string>
    <string name="text_next">NEXT</string>
    <string name="please_wait">Please wait...</string>
    <string name="upload_course_video">Upload Course Video</string>
    <string name="your_pretest_result">Your Pretest Result</string>
    <string name="videos">Videos For You</string>
    <string name="title_activity_main_test">Main Test</string>
    <string name="see_recommendation">SEE RECOMMENDATIONS</string>
    <string name="your_main_test_result">Your Main Test Result</string>
    <string name="recommendation">Recommendation</string>
    <string name="welcome">Welcome!</string>
    <string name="login">Login</string>
    <string name="guest">Guest</string>
    <string name="libraries">Libraries</string>
    <string name="demo_videos">DEMO VIDEOS</string>

</resources>
