<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_actionbar"
            style="@style/ToolbarNormalTheme"
            app:title="@string/welcome"
            app:titleTextColor="@color/colorWhite" />

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:id="@+id/welcome_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/appbar"
        android:gravity="center_horizontal"
        android:padding="16dp"
        android:text="@string/welcome_lets_get_you_started"
        android:textColor="@color/colorWhite"
        android:textSize="25sp"
        android:textStyle="normal" />

    <View
        android:id="@+id/header_divider"
        android:layout_width="match_parent"
        android:layout_height="0.01dp"
        android:layout_below="@+id/welcome_header"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:background="@color/colorPrimaryDark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="16dp"
            android:text="@string/select_your_category"
            android:textColor="#fafafa"
            android:textSize="15sp" />

        <Button
            android:id="@+id/employee_login"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/employee"
            android:theme="@style/Widget.Button.Login.Normal" />

        <Button
            android:id="@+id/manager_login"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/manager"
            android:theme="@style/Widget.Button.Login.Normal" />

    </LinearLayout>

</RelativeLayout>