<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_actionbar"
            style="@style/ToolbarNormalTheme"
            app:title="@string/login"
            app:titleTextColor="@color/colorWhite" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/id_box"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/colorWhite"
                android:gravity="start"
                android:hint="@string/your_id"
                android:padding="10dp" />

            <EditText
                android:id="@+id/password_box"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/colorWhite"
                android:gravity="start"
                android:hint="@string/your_password"
                android:inputType="textPassword"
                android:padding="10dp" />

            <Button
                android:id="@+id/continue_button"
                android:layout_width="300sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30sp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/continue_"
                android:textColor="@color/colorWhite" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
