<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_actionbar"
            style="@style/ToolbarNormalTheme"
            app:title="@string/welcome_ugo"
            app:titleTextColor="@color/colorWhite" />

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:id="@+id/header_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appbar"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/assign_2_courses"
        android:textColor="@color/colorWhite"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@color/colorPrimaryDark"
        android:gravity="end"
        android:padding="10dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/assign_courses_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:gravity="end"
            android:padding="5dp"
            android:text="@string/assign_selected"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/staff_course_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_bar"
        android:layout_below="@+id/header_message"
        android:padding="10dp" />


</RelativeLayout>