<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <TextView
        android:id="@+id/welcome_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:padding="16dp"
        android:text="Update Your password"
        android:textColor="@color/colorWhite"
        android:textSize="25sp"
        android:textStyle="normal" />

    <View
        android:id="@+id/header_divider"
        android:layout_width="match_parent"
        android:layout_height="0.01dp"
        android:layout_below="@+id/welcome_header"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorWhite" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/current_password_box"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/colorWhite"
            android:gravity="start"
            android:inputType="textPassword"
            android:hint="@string/current_password"
            android:padding="10dp" />

        <EditText
            android:id="@+id/new_password_box"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/colorWhite"
            android:gravity="start"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:padding="10dp" />

        <Button
            android:id="@+id/continue_button"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30sp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/continue_"
            android:textColor="@color/colorWhite" />

    </LinearLayout>

</RelativeLayout>