<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.grandilo.financelearn.ui.activities.EmployeeHomeScreen">

    <ImageView
        android:id="@+id/settings"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="10dp"
        android:clickable="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_settings_primary_dark_36dp"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/welcome_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:padding="16dp"
        android:text="@string/welcome_ugo"
        android:textColor="@color/colorWhite"
        android:textSize="25sp"
        android:textStyle="normal" />

    <View
        android:id="@+id/header_divider"
        android:layout_width="match_parent"
        android:layout_height="0.01dp"
        android:layout_below="@+id/welcome_header"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorWhite" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/my_courses_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="30dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:src="@drawable/books"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingTop="10dp"
                android:text="@string/my_courses"
                android:textColor="@color/colorWhite"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/request_demo_view"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="250dp"
                android:layout_height="100dp"
                android:background="@color/colorPrimaryDark"
                android:src="@drawable/demo"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingTop="10dp"
                android:text="@string/demo"
                android:textColor="@color/colorWhite"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
